# vara-launchpad-contract

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRODUCTION_READY_SUMMARY.md  README.md  VFT_INTEGRATION_SUMMARY.md
contracts/launchpad/: .binpath  Cargo.toml  README.md  build.rs
contracts/launchpad/app/: Cargo.toml
contracts/launchpad/app/src/: lib.rs  vft_client.rs  vft_factory.rs
contracts/launchpad/client/: Cargo.toml
contracts/launchpad/client/src/: lib.rs
contracts/launchpad/src/: lib.rs
contracts/launchpad/tests/: gtest.rs
docs/: deployment-guide.md  integration-patterns.md  security-checklist.md  vft-integration.md
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  types.rs
