[workspace]
resolver = "2"
members = [
    "shared",
    "contracts/launchpad",
    "contracts/launchpad/app",
    "contracts/launchpad/client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Sails framework (matching gear-foundation/dapps)
sails-rs = "=0.9.1"
sails-idl-gen = "=0.9.1"
sails-client-gen = "=0.9.1"

# Gear core dependencies
gstd = "=1.9.1"
gtest = "=1.9.1"
gclient = "=1.9.1"

# Codec
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

# Testing
tokio = { version = "1", features = ["rt", "macros"] }

# Build utilities
serde_json = "1"

# Internal crates
vara-contracts-shared = { path = "shared" }
