[package]
name = "vara-launchpad"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vara Token Launchpad with VFT Integration"
authors = ["Your Name"]

[dependencies]
launchpad-app = { path = "app" }
sails-rs.workspace = true

[build-dependencies]
launchpad-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
vara-launchpad = { path = ".", features = ["wasm-binary"] }
launchpad-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio.workspace = true
gtest.workspace = true

[features]
wasm-binary = []
